[package]
name = "hmac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5"
blake3 = "1.3.1"
openssl = "0.10.42"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "hmac"
path = "src/hmac.rs"

[[bin]]
name = "sender"
path = "src/sender.rs"

[[bin]]
name = "receiver"
path = "src/receiver.rs"

